--- a/prepros.config
+++ b/prepros.config
@@ -937,6 +937,7 @@
       {
         "file": "resources/css/style.css",
         "config": {
+          "autoCompile": true,
           "tasks": {
             "minify-css": {
               "enable": false
